# Momentum-Trading-Bot

./: CMakeLists.txt  main.cpp
include/: bollinger_bands.h  changepoint_detection.h  correlation.h  data_fetcher.h  logger.h  momentum_strategy.h  monte_carlo.h  pairs_trading.h  plotter.h  trading_model.h
src/: bollinger_bands.cpp  changepoint_detection.cpp  correlation.cpp  data_fetcher.cpp  logger.cpp  momentum_strategy.cpp  monte_carlo.cpp  pairs_trading.cpp  plotter.cpp  trading_model.cpp
